--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
 		<artifactId>spring-web</artifactId>
 		<version>5.0.5.RELEASE</version>
 	</dependency>
+
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-web</artifactId>
+		<version>2.0.1.RELEASE</version>
+	</dependency>
   </dependencies>
   
     <build>
