--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   <dependencies>
 	<dependency>
 		<groupId>org.springframework</groupId>
-		<artifactId>spring-web</artifactId>
+		<artifactId>spring-webmvc</artifactId>
 		<version>5.0.5.RELEASE</version>
 	</dependency>
 
