--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
  
-  <groupId>pl.madejspace.matteoart</groupId>
-  <artifactId>matteo-art</artifactId>
+  <groupId>pl.madejspace.postudencku</groupId>
+  <artifactId>po-studencku</artifactId>
   <version>0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
  
-  <name>Matteo-art</name>
-  <url>http://matteo-art.cba.pl/</url>
+  <name>Restauracja "Po Studencku"</name>
+  <url>http://bleble/</url>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
