--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-debug=true
+debug=false
 spring.datasource.url=jdbc:mysql://localhost:3306/ps
 spring.datasource.username=ps
 spring.datasource.password=ps123
