--- a/pom.xml
+++ b/pom.xml
@@ -35,9 +35,11 @@
       <optional>true</optional>
     </dependency>
     <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.11</version>
     </dependency>
+
   </dependencies>
 
   <properties>
